# tt-trinity-gamma

./: .gds_trigger  .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  D2D_PROTOCOL.md  GF16_BFLOAT16_NMSE.md  LINEUP.md  README.md  STATUS.md  TRIPLE_DECK_STATUS.md  info.yaml
.github/: create_all_issues.sh
crates/cap-boost-witness/: Cargo.toml
crates/cap-boost-witness/src/: lib.rs
crates/cap-boost-witness/tests/: opcode.rs
crates/tri1-tenet-witnesses/: Cargo.toml  README.md
crates/tri1-tenet-witnesses/src/: lib.rs  w33_oracle.rs
crates/tri1-tenet-witnesses/tests/: w_102_a_wave33.rs  w_102_a_witness.rs
docs/: DEVKIT_DEMO.md  GF_ARITH_FINDINGS.md  L-DPC22-K-DUAL-LIB.md  L-DPC23-T-QBRAIN-ALIAS.md  PINOUT.md
src/: alu9_decoder.v  alu9_decoder_v2.v  audit_log_ring_buffer.v  avs_controller_48.v  avs_controller_96.v  avs_reconf.v  bitnet_encoder.v  bitnet_encoder_v2.v  blake3_anchor.v  blake3_anchor_kat.v  blake3_anchor_v2.v  blake3_anchor_v3.v  blake3_anchor_v4.v  blake3_hash.v  blake3_hash_chunk.v  blake3_keyed_hash.v  champion_bpb_oracle.v  composition_kernel.v  config.json  datalog_engine_mini.v  depin_b4_mesh8.v  depin_b7_porep.v  dot16_study.v  fbb_active_path.v  gf10_add.v  gf10_mul.v  gf128_add.v  gf128_mul.v  gf12_add.v  gf12_mul.v  gf14_add.v  gf14_mul.v  gf16_dot4_b.v  gf16_dot4_v2.v  gf16_mul.v  gf16_to_fp16.v  gf16_to_posit16.v  gf16_v2_add.v  gf16_v2_mul.v  gf16_v3_mul.v  (+33 more)
test/: Makefile  blake3_anchor_v3_verify.py  blake3_anchor_v4_verify.py  blake3_anchor_verify.py  blake3_hash_chunk_verify.py  blake3_hash_verify.py  blake3_keyed_hash_verify.py  (+42 more)
(+58 files in other folders)
